@startuml

title __QUERY_HANDLER's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      namespace query_handler {
        class wasteless.server.business.query_handler.GroceryListQueryHandler {
            + GroceryListQueryHandler()
            + getAllGroceryLists()
            + getGroceryListById()
        }

        class wasteless.server.business.query_handler.ItemQueryHandler {
                    + ItemQueryHandler()
                    + getAllItems()
                    + getItemById()
        }

        class wasteless.server.business.query_handler.UserQueryHandler {
                    + UserQueryHandler()
                    + getActiveUser()
                    + getAllUsers()
                    + getUserById()
        }
      }
    }
  }

  

  wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.ExportService : exportService
  wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.query_service.GroceryListQueryService : groceryListService
  wasteless.server.business.query_handler.GroceryListQueryHandler o-- wasteless.server.business.WasteManagerService : wasteManagerService
  wasteless.server.business.query_handler.ItemQueryHandler o-- wasteless.server.presentation.mapper.ItemMapper : itemMapper
  wasteless.server.business.query_handler.ItemQueryHandler o-- wasteless.server.business.query_service.ItemQueryService : itemService
  wasteless.server.business.query_handler.UserQueryHandler o-- wasteless.server.presentation.mapper.UserMapper : userMapper
  wasteless.server.business.query_handler.UserQueryHandler o-- wasteless.server.business.query_service.UserQueryService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
